<resources>
    <!-- Strings relacionados a la marca -->
    <string name="brand">Parken</string>
    <string name="app_name">Parken Super</string>

    <string name="google_maps_key">AIzaSyDkmiXSeUvTkbXgV7UYpwmhiysqkrjqcZ0</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_draw_opc1">Modificar espacio Parken</string>
    <string name="nav_draw_opc2">Activar sesión Parken</string>
    <string name="nav_draw_opc3">Sancionar</string>
    <string name="nav_draw_opc4">Reportes</string>
    <string name="nav_draw_opc5">Pagar sanción</string>


    <string name="title_activity_settings">Configuración</string>


    <!-- Strings Credenciales -->
    <string name="string_email">Correo electrónico</string>
    <string name="string_password">Contraseña</string>
    <string name="string_cellphone">Celular</string>
    <string name="string_name">Nombre</string>
    <string name="string_lastname">Apellidos</string>


    <!-- Strings botones universales -->
    <string name="affirmative">OK</string>

    <!-- Strings AlertDialogs Universales -->
    <string name="alert_no_connection_tittle">Error</string>
    <string name="alert_no_connection_message">No se puede realizar la conexión con el servidor. Intente de nuevo.</string>


    <!--Strings ordenados por activity -->

    <!-- Iniciar sesión "LoginActivity" -->

    <!-- Botones -->
    <string name="button_login">Iniciar sesión</string>
    <string name="link_signUp">Crear cuenta</string>
    <string name="link_recover_pass">Recuperar contraseña</string>

    <!-- Texto -->
    <string name="permission_location_title">Parken requiere tener acceso a tu ubicación</string>
    <string name="permission_location_message">Ingresa a la configuración de aplicaciones para
        habilitar el acceso a la ubicación de tu dispositivo.</string>

    <!-- Warnings-->
    <string name="error_invalid_email_sigin">Correo electrónico no válido</string>
    <string name="error_invalid_password_sigin">Contraseña no válida. Min 4 carácteres.</string>
    <string name="error_invalid_matchpassword_sigin">La contraseña no coincide.</string>
    <string name="error_invalid_cel_sigin">Número celular no válido</string>
    <string name="error_field_required_sigin">El campo es requerido</string>
    <string name="permission_rationale_sigin">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- AlertDialogs -->
    <string name="alert_no_login_tittle">Error al iniciar sesión</string>
    <string name="alert_no_login_message">Correo o contraseña incorrecta. Intenta de nuevo.</string>
    <string name="alert_no_user_tittle">El usuario no existe</string>
    <string name="alert_no_user_message">El usuario no está registrado en Parken.</string>


    <!-- Crear cuenta "CreateActivity" -->
    <string name="label_input_data">Ingresa tus datos:</string>
    <string name="label_pass2">Repite contraseña</string>
    <string name="label_terms_conditions">Acepto términos y condiciones de Parken</string>
    <string name="label_terms_conditions_missing">Debes aceptar los términos y condiciones.</string>
    <string name="button_next">Siguiente</string>


    <!-- Verificar código "VerifiyActivity" -->


    <!-- Strings relacionados al login -->


    <!-- Strings relacionados a Crear cuenta -->


    <!-- Strings relacionados a Agregar vehiculo -->
    <string name="text_agregar_carro">Ingresa sus datos:</string>
    <string name="label_marca">Marca</string>
    <string name="label_modelo">Modelo</string>
    <string name="label_color">Color</string>
    <string name="label_placa">Placa</string>

    <!-- Strings relacionados a Recuperar contraseña -->
    <string name="txtView_recover_pass">Ingresa tu correo electrónico para recuperar tu contraseña:</string>
    <string name="button_recover_pass">Siguiente</string>
    <string name="error_credential_field_required">El dato es requerido</string>

    <!-- Errors related to Add Cars -->
    <string name="error_addcar_field_required">El dato es requerido</string>


    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Correo inválido</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to sigin
    <string name="error_invalid_email_sigin">Correo electrónico no válido</string>
    <string name="error_invalid_password_sigin">Contraseña no válida. Min 4 carácteres.</string>
    <string name="error_invalid_matchpassword_sigin">La contraseña no coincide.</string>
    <string name="error_invalid_cel_sigin">Número celular no válido</string>
    <string name="error_field_required_sigin">El campo es requerido</string>
    <string name="permission_rationale_sigin">"Contacts permissions are needed for providing email
        completions."
    </string>
    -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Parken3</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_notify_end">Notificar fin de sesión Parken</string>
    <string-array name="pref_notify_end_options">
        <item>Al finalizar</item>
        <item>5 minutos antes</item>
        <item>10 minutos antes</item>
        <item>15 minutos antes</item>
        <item>20 minutos antes</item>
    </string-array>
    <string-array name="pref_notify_end_values">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string name="pref_title_find_zonaParken">Buscar zonas Parken a:  </string>
    <string-array name="pref_find_zonaParken_options">
        <item>500 metros</item>
        <item>1 kilometro</item>
        <item>1.5 kilometros</item>
        <item>2 kilometros</item>
        <item>3 kilometros</item>
    </string-array>
    <string-array name="pref_find_zonaParken_values">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>3000</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_notifications_on">Activar notificaciones</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Name of the categories -->
    <string name="pref_cat_notificacions">Notificaciones</string>
    <string name="pref_cat_zonaParken">Zonas Parken</string>
    <string name="title_activity_recover_password">Recuperar contraseña</string>

    <!--Textos de los textView -->

    <string name="title_activity_vehiculo">Vehículos</string>
    <string name="title_activity_add_vehiculo">Agregar vehículo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_zona_parken">Map</string>
    <string name="title_activity_vehiculo_info">VehiculoInfoActivity</string>

    <string name="menu_vehiculoinfo_item1">Editar</string>
    <string name="menu_vehiculoinfo_item2">Eliminar</string>
    <string name="title_activity_socket">SocketActivity</string>
    <string name="title_activity_modify_parken_space">Modificar espacio Parken</string>
    <string name="title_activity_create_receipt">Sancionar</string>
    <string name="title_activity_pay_receipt">Pagar sanción</string>


</resources>
