<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

     <group android:checkableBehavior="none">


        <item
            android:id="@+id/nav_modify_space"
            android:icon="@drawable/ic_space"
            android:iconTint="@color/colorPrimaryDark"
            android:title="@string/nav_draw_opc1" />
         <item
             android:id="@+id/nav_session"
             android:icon="@drawable/ic_parken_notification"
             android:title="@string/nav_draw_opc2" />

         <item
             android:id="@+id/nav_sanction"
             android:icon="@drawable/ic_ticket_nav"
             android:title="@string/nav_draw_opc3" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_report"
            android:title="@string/nav_draw_opc4" />
    </group>

    <group>

        <!--<item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_nav"
                android:title="Configuración" /> -->
        <!--
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_out_nav"
                android:title="Cerrar sesión" />
                -->
    </group>


</menu>