<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddVehiculoActivity"
    tools:showIn="@layout/activity_add_vehiculo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@mipmap/ic_carrito" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <AutoCompleteTextView
            android:id="@+id/editTextMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:hint="@string/label_marca"
            android:inputType="textCapWords|textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/editTextModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:hint="@string/label_modelo"
            android:inputType="textCapWords|textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/editTextPlaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:hint="@string/label_placa"
            android:inputType="textCapWords|textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnVehiculos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="Agregar vehículo"
        android:textAllCaps="?android:attr/windowOverscan"
        android:textColor="@android:color/background_light" />
</LinearLayout>